--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<!DOCTYPE>
-<head>
-</head>
-<body>
-</body>
+<!DOCTYPE html>
+<html>
+	<head>
+		<title> Заголовок страницы </title>
+	</head>
+	<body>
+		<h1> h1 страницы
+	</body>
+</html>
