--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 	<head>
 		<title> Заголовок страницы </title>
+		<link rel="stylesheet" href="styles.css">
+
 	</head>
 	<body>
 		<h1> h1 страницы
