--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Заголовок страницы </title>
 		<link rel="stylesheet" href="styles.css">
-
+		<script src="index.js" defer></script>
 	</head>
 	<body>
 		<h1> h1 страницы
